Fix for #17 (single column grid on mobile), #18 OKFN references changed, #19 metadata for Twitter Card and FB OG

--- a/css/default.css
+++ b/css/default.css
@@ -19,6 +19,9 @@ html {
   font-family: 'Lato', sans-serif;
   background-color: #2D2D2D; }
 
+body {
+  overflow-x: hidden; }
+
 a {
   color: #00a5e0; }
 
@@ -374,7 +377,6 @@ p.hero-paragraph {
     .location .grid-33 {
       padding-bottom: 15px; }
     .location .date, .location .city, .location .place {
-      margin: 15px !important;
       padding: 0 !important; }
 
   .map {
